--- a/app/app.scss
+++ b/app/app.scss
@@ -3,5 +3,15 @@
 * {
   font-family: 'Quicksand-Regular';
   font-size: 20;
-  color: #000000;
+}
+.input-prima {
+  font-size: 20;
+  color: #fff;
+  border-bottom-width: 2;
+  border-bottom-color: #BC9CFF;
+  margin-bottom: 20;
+}
+
+.input-prima:focus {
+  border-bottom-color: #8BA4F9;
 }
