--- a/app/app.scss
+++ b/app/app.scss
@@ -10,6 +10,7 @@
   border-bottom-width: 2;
   border-bottom-color: #BC9CFF;
   margin-bottom: 20;
+  placeholder-color: #ccc;
 }
 
 .input-prima:focus {
